[gd_scene load_steps=10 format=3 uid="uid://c58lq3l5fj04b"]

[ext_resource type="Script" path="res://scripts/nodes/puzzle_control.gd" id="1_1gqu6"]
[ext_resource type="Texture2D" uid="uid://dl7k872qab0qa" path="res://assets/background/textures/old-paper-with-opulent-ornament-borders-background-illustration-cartoon-style_976369-852.jpg" id="2_f3goy"]
[ext_resource type="PackedScene" uid="uid://c11wo4k65r6hl" path="res://scenes/puzzles/translation.tscn" id="3_yngu0"]
[ext_resource type="PackedScene" uid="uid://c0a1fll54lq4s" path="res://scenes/puzzles/image_choice.tscn" id="4_34t3p"]
[ext_resource type="PackedScene" uid="uid://bjs37pvugditn" path="res://scenes/puzzles/sound_choice.tscn" id="5_2yeak"]
[ext_resource type="Theme" uid="uid://cyfc2kxar4er2" path="res://themes/Medieval.tres" id="5_t1q3j"]
[ext_resource type="Texture2D" uid="uid://d4ftwraa6015o" path="res://assets/ui/Gold icons set 1-01-01.png" id="6_jutbc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ofj1r"]
atlas = ExtResource("6_jutbc")
region = Rect2(4098, 2193, 97, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew85k"]
atlas = ExtResource("6_jutbc")
region = Rect2(3050, 875, 163, 175)

[node name="TranslationPuzzle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1gqu6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 40.0
scale = Vector2(1, 16.24)
texture = ExtResource("2_f3goy")
expand_mode = 1

[node name="Translation" parent="." instance=ExtResource("3_yngu0")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -528.0
offset_top = -261.5
offset_right = 528.0
offset_bottom = 261.5
grow_horizontal = 2
grow_vertical = 2

[node name="ImageChoice" parent="." instance=ExtResource("4_34t3p")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -528.0
offset_top = -261.5
offset_right = 528.0
offset_bottom = 261.5
grow_horizontal = 2
grow_vertical = 2

[node name="SoundChoice" parent="." instance=ExtResource("5_2yeak")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -528.0
offset_top = -261.5
offset_right = 528.0
offset_bottom = 261.5
grow_horizontal = 2
grow_vertical = 2

[node name="ClueButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 981.0
offset_top = 19.0
offset_right = 1109.0
offset_bottom = 67.0
theme = ExtResource("5_t1q3j")
text = "Pistas"
icon = SubResource("AtlasTexture_ofj1r")
expand_icon = true

[node name="TryButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 833.0
offset_top = 19.0
offset_right = 973.0
offset_bottom = 67.0
theme = ExtResource("5_t1q3j")
text = "Intentos"
icon = SubResource("AtlasTexture_ew85k")
expand_icon = true
